# bytebuddhi

./: .gitignore  README.md  main.py  pyproject.toml
server/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
server/alembic/: env.py
server/alembic/versions/: 36144d2c114a_add_agent_checkpoints_table.py  4dad8f1bf999_add_rls_policies.py  94ae091b2313_initial_migration.py
server/app/: __init__.py
server/app/application/: __init__.py
server/app/application/agent/: __init__.py  graph.py  nodes.py  state.py
server/app/application/dto/: __init__.py  chat_dto.py  project_dto.py
server/app/application/ports/: __init__.py
server/app/application/use_cases/: __init__.py
server/app/domain/: __init__.py
server/app/domain/exceptions/: __init__.py  base.py  conversation_exceptions.py  project_exceptions.py
server/app/domain/models/: __init__.py  code_chunk.py  conversation.py  embedding.py  file.py  message.py  project.py  user.py
server/app/domain/services/: __init__.py  conversation_context_service.py  file_processing_service.py  project_indexing_service.py  quota_management_service.py
server/app/domain/value_objects/: __init__.py  email.py  file_path.py  language.py
server/app/infrastructure/: __init__.py
server/app/infrastructure/auth/: __init__.py  (+2 more)
server/app/interfaces/: __init__.py
server/docs/: api.md  architecture.md  setup.md
server/scripts/: create_migration.py  migrate.py  rollback_migration.py  run_tests.py  setup.py  setup_db.py  start_dev.py  test_connection.py
(+60 files in other folders)
